--- a/webserver/templates/components/sidenav.html
+++ b/webserver/templates/components/sidenav.html
@@ -6,7 +6,7 @@
      data-te-sidenav-mode="side"
      data-te-sidenav-content="#content">
     <a class="mb-3 flex items-center justify-center border-b-2 border-solid border-gray-100 py-6 outline-none"
-       href="/public/dashboard"
+       href="/public/"
        data-te-ripple-init
        data-te-ripple-color="primary">
         <img id="te-logo"
@@ -14,14 +14,14 @@
              src="https://tailwind-elements.com/img/logo.png"
              alt="TE Logo"
              draggable="false"/>
-        <span>Infraspec Forensics</span>
+        <span>CSGO Manager</span>
     </a>
     <ul class="relative m-0 list-none px-[0.2rem] pb-12"
         data-te-sidenav-menu-ref>
         <li class="relative">
             <a class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
                data-te-sidenav-link-ref
-               href="/public/dashboard">
+               href="/public/">
           <span class="mr-4 [&>svg]:h-3.5 [&>svg]:w-3.5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg"
                  viewBox="0 0 24 24"
@@ -40,7 +40,7 @@
         </span>
             <a class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
                data-te-sidenav-link-ref
-               href="/public/create_project">
+               href="/public/create_match">
           <span class="mr-4 [&>svg]:h-5 [&>svg]:w-5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg"
                  fill="none"
@@ -53,26 +53,7 @@
                     d="M12 4.5v15m7.5-7.5h-15"/>
             </svg>
           </span>
-                <span>Project</span>
-            </a>
-        </li>
-        <li class="relative">
-            <a class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
-               data-te-sidenav-link-ref
-               href="http://127.0.0.1:8080/">
-          <span class="mr-4 [&>svg]:h-5 [&>svg]:w-5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
-            <svg xmlns="http://www.w3.org/2000/svg"
-                 fill="none"
-                 viewBox="0 0 24 24"
-                 stroke-width="1.5"
-                 stroke="currentColor"
-                 class="h-5 w-5">
-              <path stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M12 4.5v15m7.5-7.5h-15"/>
-            </svg>
-          </span>
-                <span>Database</span>
+                <span>Match</span>
             </a>
         </li>
         <li class="relative pt-4">
@@ -81,7 +62,7 @@
         </span>
             <a class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
                data-te-sidenav-link-ref
-               href="/public/projects">
+               href="/public/demos">
           <span class="mr-4 [&>svg]:h-3.5 [&>svg]:w-3.5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg"
                  viewBox="0 0 24 24"
@@ -91,12 +72,13 @@
                       d="M12.378 1.602a.75.75 0 00-.756 0L3 6.632l9 5.25 9-5.25-8.622-5.03zM21.75 7.93l-9 5.25v9l8.628-5.032a.75.75 0 00.372-.648V7.93zM11.25 22.18v-9l-9-5.25v8.57a.75.75 0 00.372.648l8.628 5.033z"/>
             </svg>
           </span>
-                <span>Projects</span>
+                <span>Demos</span>
             </a>
         </li>
         <li class="relative">
             <a class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
-               data-te-sidenav-link-ref>
+               data-te-sidenav-link-ref
+               href="/public/backups">
           <span class="mr-4 [&>svg]:h-3.5 [&>svg]:w-3.5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg"
                  viewBox="0 0 24 24"
@@ -108,7 +90,7 @@
               <path d="M12 20.25c2.685 0 5.19-.586 7.078-1.609a8.282 8.282 0 001.897-1.384c.016.121.025.244.025.368 0 2.692-4.03 4.875-9 4.875s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.284 8.284 0 001.897 1.384C6.809 19.664 9.315 20.25 12 20.25z"/>
             </svg>
           </span>
-                <span>Databases</span>
+                <span>Backups</span>
             </a>
         </li>
         <li class="relative pt-4">
@@ -132,13 +114,13 @@
                 <span>Analytics</span>
             </a>
         </li>
-        {% if admin %}
-            <li class="relative pt-4">
+        <li class="relative pt-4">
         <span class="py-4 px-6 text-[0.6rem] font-bold uppercase text-gray-600 dark:text-gray-400">
             Admin
         </span>
-                <a href="/public/config" class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
-                   data-te-sidenav-link-ref>
+            <a href="/public/config"
+               class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
+               data-te-sidenav-link-ref>
           <span class="mr-4 [&>svg]:h-3.5 [&>svg]:w-3.5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg"
                  viewBox="0 0 24 24"
@@ -151,27 +133,7 @@
               <path d="M2.25 18a.75.75 0 000 1.5c5.4 0 10.63.722 15.6 2.075 1.19.324 2.4-.558 2.4-1.82V18.75a.75.75 0 00-.75-.75H2.25z"/>
             </svg>
           </span>
-                    <span>Config Settings</span>
-                </a>
-            </li>
-        {% endif %}
-        <li class="relative pt-4">
-        <span class="py-4 px-6 text-[0.6rem] font-bold uppercase text-gray-600 dark:text-gray-400">
-            Tools
-        </span>
-            <a class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
-               data-te-sidenav-link-ref>
-          <span class="mr-4 [&>svg]:h-3.5 [&>svg]:w-3.5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
-            <svg xmlns="http://www.w3.org/2000/svg"
-                 viewBox="0 0 24 24"
-                 fill="currentColor"
-                 class="h-3.5 w-3.5">
-              <path fill-rule="evenodd"
-                    d="M14.447 3.027a.75.75 0 01.527.92l-4.5 16.5a.75.75 0 01-1.448-.394l4.5-16.5a.75.75 0 01.921-.526zM16.72 6.22a.75.75 0 011.06 0l5.25 5.25a.75.75 0 010 1.06l-5.25 5.25a.75.75 0 11-1.06-1.06L21.44 12l-4.72-4.72a.75.75 0 010-1.06zm-9.44 0a.75.75 0 010 1.06L2.56 12l4.72 4.72a.75.75 0 11-1.06 1.06L.97 12.53a.75.75 0 010-1.06l5.25-5.25a.75.75 0 011.06 0z"
-                    clip-rule="evenodd"/>
-            </svg>
-          </span>
-                <span>test</span>
+                <span>Config Settings</span>
             </a>
         </li>
     </ul>
