--- a/webserver/templates/public/matches.html
+++ b/webserver/templates/public/matches.html
@@ -25,8 +25,8 @@
                                 <td class="whitespace-nowrap px-2 py-2 font-medium">{{ match.id }}</td>
                                 <td class="whitespace-nowrap px-2 py-2">{{ match.matchid }}</td>
                                 <td class="whitespace-nowrap px-2 py-2">{{ match.name }}</td>
-                                <td class="whitespace-nowrap px-2 py-2">{{ match.team1 }}</td>
-                                <td class="whitespace-nowrap px-2 py-2">{{ match.team2 }}</td>
+                                <td class="whitespace-nowrap px-2 py-2">{{ match.team1.name }}</td>
+                                <td class="whitespace-nowrap px-2 py-2">{{ match.team2.name }}</td>
                                 <td class="whitespace-nowrap px-2 py-2">{{ match.best_out_of }}</td>
                                 <td class="whitespace-nowrap px-2 py-2">{{ match.number_in_map_series }}</td>
                                 <td class="whitespace-nowrap px-2 py-2">{{ match.series_score_team1 }}</td>
