--- a/webserver/templates/components/sidenav.html
+++ b/webserver/templates/components/sidenav.html
@@ -113,7 +113,7 @@
             <span class="py-4 px-6 text-[0.6rem] font-bold uppercase text-gray-600 dark:text-gray-400">Maintain</span>
             <a class="flex cursor-pointer items-center truncate rounded-[5px] py-[0.45rem] px-6 text-[0.85rem] text-gray-600 outline-none transition duration-300 ease-linear hover:bg-slate-50 hover:text-inherit hover:outline-none focus:bg-slate-50 focus:text-inherit focus:outline-none active:bg-slate-50 active:text-inherit active:outline-none data-[te-sidenav-state-active]:text-inherit data-[te-sidenav-state-focus]:outline-none motion-reduce:transition-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10 dark:active:bg-white/10"
                data-te-sidenav-link-ref
-               href="/public/status">
+               href="/public/analytics">
           <span class="mr-4 [&>svg]:h-3.5 [&>svg]:w-3.5 [&>svg]:text-gray-400 dark:[&>svg]:text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg"
                  viewBox="0 0 24 24"
