--- a/webserver/templates/public/config.html
+++ b/webserver/templates/public/config.html
@@ -11,10 +11,22 @@
                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:peer-focus:text-primary [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
                        id="ip"
                        placeholder="IP of the host"
-                       value="host.docker.internal:5000"/>
+                       value="host.docker.internal"/>
                 <label for="ip"
                        class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary">
                     IP
+                </label>
+            </div>
+
+            <div class="relative mb-3" data-te-input-wrapper-init>
+                <input type="text"
+                       class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 dark:peer-focus:text-primary [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                       id="port"
+                       placeholder="PORT of the host"
+                       value="5000"/>
+                <label for="port"
+                       class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary">
+                    PORT
                 </label>
             </div>
 
@@ -40,7 +52,8 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
-                    ip: document.getElementById("ip").value
+                    ip: document.getElementById("ip").value,
+                    port: parseInt(document.getElementById("port").value)
                 })
             })
                 .then(res => {
@@ -73,12 +86,14 @@
                         <thead class="border-b bg-neutral-800 font-medium text-white dark:border-neutral-500 dark:bg-neutral-900">
                         <tr>
                             <th scope="col" class="px-2 py-2">ip</th>
+                            <th scope="col" class="px-2 py-2">port</th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for host in hosts %}
                             <tr class="border-b dark:border-neutral-500 text-black dark:text-white">
                                 <td class="whitespace-nowrap px-2 py-2">{{ host.ip }}</td>
+                                <td class="whitespace-nowrap px-2 py-2">{{ host.port }}</td>
                             </tr>
                         {% endfor %}
                         </tbody>
